* personal introduce ,use tag p install pre

--- a/index.html
+++ b/index.html
@@ -2,98 +2,98 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hongkai</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hongkai</title>
 
-  <!--
+    <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
 
-  <!--
+    <!--
     - custom css link
   -->
-  <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
-  <!--
+    <!--
     - google font link
   -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-  <!--
+    <!--
     - #MAIN
   -->
 
-  <main>
+    <main>
 
-    <!--
+        <!--
       - #SIDEBAR
     -->
 
-    <aside class="sidebar" data-sidebar>
+        <aside class="sidebar" data-sidebar>
 
-      <div class="sidebar-info">
+            <div class="sidebar-info">
 
-        <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.jpg" alt="Hongkai Wang" width="80">
-        </figure>
+                <figure class="avatar-box">
+                    <img src="./assets/images/my-avatar.jpg" alt="Hongkai Wang" width="80">
+                </figure>
 
-        <div class="info-content">
-          <h1 class="name" title="Hongkai Wang">Hongkai Wang</h1>
+                <div class="info-content">
+                    <h1 class="name" title="Hongkai Wang">Hongkai Wang</h1>
 
-          <p class="title">Husband, Father, Son</p>
-        </div>
+                    <p class="title">Husband, Father, Son</p>
+                </div>
 
-        <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
+                <button class="info_more-btn" data-sidebar-btn>
+                    <span>Show Contacts</span>
 
-          <ion-icon name="chevron-down"></ion-icon>
-        </button>
+                    <ion-icon name="chevron-down"></ion-icon>
+                </button>
 
-      </div>
-
-      <div class="sidebar-info_more">
-
-        <div class="separator"></div>
-
-        <ul class="contacts-list">
-
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="mail-outline"></ion-icon>
             </div>
 
-            <div class="contact-info">
-              <p class="contact-title">Email</p>
+            <div class="sidebar-info_more">
 
-              <a href="mailto:whk.private@gmail.com" class="contact-link">whk.private@gmail.com</a>
-            </div>
+                <div class="separator"></div>
 
-          </li>
+                <ul class="contacts-list">
 
-          <li class="contact-item">
+                    <li class="contact-item">
 
-            <div class="icon-box">
-              <ion-icon name="phone-portrait-outline"></ion-icon>
-            </div>
+                        <div class="icon-box">
+                            <ion-icon name="mail-outline"></ion-icon>
+                        </div>
 
-            <div class="contact-info">
-              <p class="contact-title">Wechat</p>
+                        <div class="contact-info">
+                            <p class="contact-title">Email</p>
 
-              <a  class="contact-link">micelife</a>
-            </div>
+                            <a href="mailto:whk.private@gmail.com" class="contact-link">whk.private@gmail.com</a>
+                        </div>
 
-          </li>
+                    </li>
 
-          <!-- <li class="contact-item">
+                    <li class="contact-item">
+
+                        <div class="icon-box">
+                            <ion-icon name="phone-portrait-outline"></ion-icon>
+                        </div>
+
+                        <div class="contact-info">
+                            <p class="contact-title">Wechat</p>
+
+                            <a class="contact-link">micelife</a>
+                        </div>
+
+                    </li>
+
+                    <!-- <li class="contact-item">
 
             <div class="icon-box">
               <ion-icon name="calendar-outline"></ion-icon>
@@ -107,25 +107,25 @@
 
           </li> -->
 
-          <li class="contact-item">
+                    <li class="contact-item">
 
-            <div class="icon-box">
-              <ion-icon name="location-outline"></ion-icon>
-            </div>
+                        <div class="icon-box">
+                            <ion-icon name="location-outline"></ion-icon>
+                        </div>
 
-            <div class="contact-info">
-              <p class="contact-title">Location</p>
+                        <div class="contact-info">
+                            <p class="contact-title">Location</p>
 
-              <address>Shenzhen, Guangdong, China</address>
-            </div>
+                            <address>Shenzhen, China</address>
+                        </div>
 
-          </li>
+                    </li>
 
-        </ul>
+                </ul>
 
-        <div class="separator"></div>
+                <div class="separator"></div>
 
-        <!-- <ul class="social-list">
+                <!-- <ul class="social-list">
 
           <li class="social-item">
             <a href="#" class="social-link">
@@ -147,25 +147,25 @@
 
         </ul> -->
 
-      </div>
+            </div>
 
-    </aside>
-
-
+        </aside>
 
 
 
-    <!--
+
+
+        <!--
       - #main-content
     -->
 
-    <div class="main-content">
+        <div class="main-content">
 
-      <!--
+            <!--
         - #NAVBAR
       -->
 
-      <!-- <nav class="navbar">
+            <!-- <nav class="navbar">
 
         <ul class="navbar-list">
 
@@ -183,132 +183,143 @@
 
 
 
-      <!--
+            <!--
         - #ABOUT
       -->
 
-      <article class="about  active" data-page="about">
-        <header>
-          <h2 class="h2 article-title">Personal</h2>
-        </header>
+            <article class="about  active" data-page="about">
+                <header>
+                    <h2 class="h2 article-title">Personal</h2>
+                </header>
 
-        <section class="about-text">
-          
-            <pre style="text-align:left">
-              Professional Title&#9;Welab Tech Manager
-            </pre>
-          
-          <!-- </p> -->
-        </section>
+                <section class="about-text">
 
-        <header>
-          <h2 class="h2 article-title">About me</h2>
-        </header>
-
-        <section class="about-text">
-          <p>
-            Awakening in progress ： I think cognition is important in the current information explosion society. We should know what we want and what we are pursuing so that we do not spend a few short decades in desolation.
-          </p>
-
-          <p>
-            I work for a ToB company in China and I am mainly responsible for building the data middle office. You can simply think of ETL type tools, like Airbyte, TapData. we build our own products：
-            <ul>
-              <li>* Data security platform: application security, data security (storage, usage, transmission).</li>
-              <li>* Data Lake Platform: a real-time data synchronization tool based on Debezium for lightweight data cleansing.</li>
-              <li>* Data development platform: a balance of offline tasks (mainly) and real-time tasks. Mainly based on DophinSchedule's offline scheduling to achieve data processing and handling that can be highly flexible.</li>
-              <li>* Data analysis platform: visual report construction, convenient dimensional analysis, event analysis, funnel analysis, etc.  </li>
-            </ul>
-          </p>
-        </section>
+                    <p>
+                        Professional Title&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Welab Tech Manager
 
 
-        <!--
+                    </p>
+                </section>
+
+                <header>
+                    <h2 class="h2 article-title">About me</h2>
+                </header>
+
+                <section class="about-text">
+                    <p>
+                        Awakening in progress ： I think cognition is important in the current information explosion
+                        society. We should know what we want and what we are pursuing so that we do not spend a few
+                        short decades in desolation.
+                    </p>
+
+                    <p>
+                        I work for a ToB company in China and I am mainly responsible for building the data middle
+                        office. You can simply think of ETL type tools, like Airbyte, TapData. we build our own
+                        products：
+                    <ul>
+                        <li>* Data security platform: application security, data security (storage, usage,
+                            transmission).</li>
+                        <li>* Data Lake Platform: a real-time data synchronization tool based on Debezium for
+                            lightweight data cleansing.</li>
+                        <li>* Data development platform: a balance of offline tasks (mainly) and real-time tasks. Mainly
+                            based on DophinSchedule's offline scheduling to achieve data processing and handling that
+                            can be highly flexible.</li>
+                        <li>* Data analysis platform: visual report construction, convenient dimensional analysis, event
+                            analysis, funnel analysis, etc. </li>
+                    </ul>
+                    </p>
+                </section>
+
+
+                <!--
           - service
         -->
 
-        <section class="service">
+                <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+                    <h3 class="h3 service-title">What i'm doing</h3>
 
-          <ul class="service-list">
+                    <ul class="service-list">
 
-            <li class="service-item">
+                        <li class="service-item">
 
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
+                            <div class="service-icon-box">
+                                <img src="./assets/images/icon-design.svg
                 " alt="design icon" width="40">
-              </div>
+                            </div>
 
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Team Management</h4>
+                            <div class="service-content-box">
+                                <h4 class="h4 service-item-title">Team Management</h4>
 
-                <p class="service-item-text">
-                      7 years of experience managing teams of over ten people.
-                      Led multi-million (turnover, RMB) banking projects.
-                </p>
-              </div>
+                                <p class="service-item-text">
+                                    7 years of experience managing teams of over ten people.
+                                    Led multi-million (turnover, RMB) banking projects.
+                                </p>
+                            </div>
 
-            </li>
+                        </li>
 
-            <li class="service-item">
+                        <li class="service-item">
 
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
-              </div>
+                            <div class="service-icon-box">
+                                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                            </div>
 
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Technical Architecture</h4>
+                            <div class="service-content-box">
+                                <h4 class="h4 service-item-title">Technical Architecture</h4>
 
-                <p class="service-item-text">
-                  Lead the architecture design of ETL products and participate in ToB output.
-                </p>
-              </div>
+                                <p class="service-item-text">
+                                    Lead the architecture design of ETL products and participate in ToB output.
+                                </p>
+                            </div>
 
-            </li>
+                        </li>
 
-            <li class="service-item">
+                        <li class="service-item">
 
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
-              </div>
+                            <div class="service-icon-box">
+                                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                            </div>
 
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Self-improvement</h4>
+                            <div class="service-content-box">
+                                <h4 class="h4 service-item-title">Self-improvement</h4>
 
-                <p class="service-item-text">
-                  Raising awareness in the workplace: personal planning, upward management, team management, leadership building, etc.
-                </p>
-              </div>
+                                <p class="service-item-text">
+                                    Raising awareness in the workplace: personal planning, upward management, team
+                                    management, leadership building, etc.
+                                </p>
+                            </div>
 
-            </li>
+                        </li>
 
-            <li class="service-item">
+                        <li class="service-item">
 
-              <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
-              </div>
+                            <div class="service-icon-box">
+                                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                            </div>
 
-              <div class="service-content-box">
-                <h4 class="h4 service-item-title">Read</h4>
+                            <div class="service-content-box">
+                                <h4 class="h4 service-item-title">Read</h4>
 
-                <p class="service-item-text">
-                  The second mountain（done）;The Power of Habit(done) ;From Good to Great（done）;Outliers The Story of Success (90%) s;
-                  Steve Jobs（60%）
-                </p>
-              </div>
+                                <p class="service-item-text">
+                                    The second mountain（done）;The Power of Habit(done) ;From Good to
+                                    Great（done）;Outliers The Story of Success (90%) s;
+                                    Steve Jobs（60%）
+                                </p>
+                            </div>
 
-            </li>
+                        </li>
 
-          </ul>
+                    </ul>
 
-        </section>
+                </section>
 
 
-        <!--
+                <!--
           - testimonials
         -->
 
-        <!-- <section class="testimonials">
+                <!-- <section class="testimonials">
 
           <h3 class="h3 testimonials-title">Testimonials</h3>
 
@@ -407,11 +418,11 @@
         </section> -->
 
 
-        <!--
+                <!--
           - testimonials modal
         -->
 
-        <!-- <div class="modal-container" data-modal-container>
+                <!-- <div class="modal-container" data-modal-container>
 
           <div class="overlay" data-overlay></div>
 
@@ -452,11 +463,11 @@
         </div> -->
 
 
-        <!--
+                <!--
           - clients
         -->
 
-        <!-- <section class="clients">
+                <!-- <section class="clients">
 
           <h3 class="h3 clients-title">Clients</h3>
 
@@ -502,28 +513,28 @@
 
         </section> -->
 
-      </article>
+            </article>
 
 
-    </div>
+        </div>
 
-  </main>
-
-
-
+    </main>
 
 
 
-  <!--
+
+
+
+    <!--
     - custom js link
   -->
-  <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 
-  <!--
+    <!--
     - ionicon link
   -->
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 
