--- a/index_zh.html
+++ b/index_zh.html
@@ -90,40 +90,31 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <li class="navbar-item">
-            <a class="navbar-link active">English</a>
+            <a href="/" class="navbar-link">English</a>
           </li>
           <li class="navbar-item">
-            <a href="index_zh.html" class="navbar-link">中文</a>
+            <a class="navbar-link active">中文</a>
           </li>
         </ul>
       </nav>
       <!--
-              - #English
+              - #中文
             -->
-      <article class="about  active" data-page="english">
+      <article class="about  active" data-page="中文">
         <header>
-          <h2 class="h2 article-title">About me</h2>
+          <h2 class="h2 article-title">关于我</h2>
         </header>
         <section class="about-text">
           <p>
-            Awakening in progress ： I think cognition is important in the current information explosion
-            society. We should know what we want and what we are pursuing so that we do not spend a few
-            short decades in desolation.
+            觉醒进行时 ：我认为在当前信息爆炸的社会中，认知是很重要的。我们应该知道我们想要什么，我们在追求什么，这样我们就不会在短短的几十年里荒废了。
           </p>
           <p>
-            I work for a ToB company in China and I am mainly responsible for building the data middle
-            platform. You can simply think of ETL type tools, like Airbyte, TapData. we build our own
-            products：
+            我在中国的一家ToB公司工作，主要负责建立数据中台。你可以简单地认为是ETL类型的工具，比如Airbyte、TapData。我们构建自己的产品：
           <ul>
-            <li>* Data security platform: application security, data security (storage, usage,
-              transmission).</li>
-            <li>* Data Lake Platform: a real-time data synchronization tool based on Debezium for
-              lightweight data cleansing.</li>
-            <li>* Data development platform: a balance of offline tasks (mainly) and real-time tasks. Mainly
-              based on DophinSchedule's offline scheduling to achieve data processing and handling that
-              can be highly flexible.</li>
-            <li>* Data analysis platform: visual report construction, convenient dimensional analysis, event
-              analysis, funnel analysis, etc. </li>
+            <li>* 数据安全平台: 应用安全, 数据安全 (存储, 使用,传输).</li>
+            <li>* 数据湖平台: 基于Debezium的轻量级数据清洗的事实数据同步工具。</li>
+            <li>* 数据开发平台: 支持离线任务（主要）和实时任务。 基于DophinSchedule的高扩展性、灵活性的离线调度平台。</li>
+            <li>* 数据分析平台: 虚拟报表设计，维度分析、事件分析、漏斗分析等。</li>
           </ul>
           </p>
         </section>
@@ -131,18 +122,17 @@
                 - service
               -->
         <section class="service">
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">进行中的状态</h3>
           <ul class="service-list">
             <li class="service-item">
               <div class="service-icon-box">
                 <img src="./assets/images/icon-design.svg
-                      " alt="design icon" width="40">
+                              " alt="design icon" width="40">
               </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Team Management</h4>
+                <h4 class="h4 service-item-title">团队管理</h4>
                 <p class="service-item-text">
-                  7 years of experience managing teams of over ten people.<br>
-                  Led multi-million (turnover, RMB) banking projects.
+                  7年超过是人的团队管理经验。<br>主导超百万成交额的银行项目。
                 </p>
               </div>
             </li>
@@ -151,9 +141,9 @@
                 <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Technical Architecture</h4>
+                <h4 class="h4 service-item-title">技术架构</h4>
                 <p class="service-item-text">
-                  Lead the architecture design of ETL products and participate in ToB output.
+                  主导ETL产品的架构设计和参与ToB输出。
                 </p>
               </div>
             </li>
@@ -162,10 +152,9 @@
                 <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
               </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Self-improvement</h4>
+                <h4 class="h4 service-item-title">自我提升</h4>
                 <p class="service-item-text">
-                  personal planning, <br>upward management, <br>team
-                  management, <br>leadership building, etc.
+                  个人规划、<br>向上管理、<br>团队管理、<br>领导力建设等。
                 </p>
               </div>
             </li>
@@ -174,11 +163,10 @@
                 <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
               </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Read</h4>
+                <h4 class="h4 service-item-title">阅读</h4>
                 <p class="service-item-text">
-                  The second mountain（done）<br>The Power of Habit(done) <br>From Good to
-                  Great（done）<br>Outliers The Story of Success (90%) <br>
-                  Steve Jobs（60%）
+                  第二座山（已完成）<br>行为的力量（已完成）<br>从优秀到卓越（已完成）<br>异类 (90%) <br>
+                  史蒂夫·乔布斯（60%）
                 </p>
               </div>
             </li>
