--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </p>
         </div>
         <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
+          <span>Show Strengths</span>
           <ion-icon name="chevron-down"></ion-icon>
         </button>
       </div>
