--- a/index_zh.html
+++ b/index_zh.html
@@ -33,11 +33,11 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.jpg" alt="Hongkai Wang" width="80">
+          <img src="./assets/images/my-avatar.jpg" alt="王虹凯" width="80">
         </figure>
         <div class="info-content">
-          <h1 class="name" title="Hongkai Wang">Hongkai Wang</h1>
-          <p class="title">Tech Manager</p>
+          <h1 class="name" title="Hongkai Wang">王虹凯</h1>
+          <p class="title">技术经理</p>
           <p style="padding-top: 20px;">
           <ul class="social-list">
             <li class="social-item">
@@ -59,7 +59,7 @@
           </p>
         </div>
         <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Contacts</span>
+          <span>展示优势</span>
           <ion-icon name="chevron-down"></ion-icon>
         </button>
       </div>
@@ -67,15 +67,15 @@
       <div class="sidebar-info_more">
 
         <p>
-          <b>1. Management</b><br>
-          > 8+ years management experience<br>
-          > Lead : Data Product Team, Middleware Team, Marketing Team
+          <b>1. 管理</b><br>
+          > 8年+技术管理经验<br>
+          > 带过 : 数据中台团队, 中间件团队（自研）, 渠道营销团队（拉新&留存）
         </p>
         <p>
-          <b>2. Tech</b><br>
-          > Rich experience in system architecture<br>
-          > Proficient in multi-threaded development, good at solving production JVM problems<br>
-          > Github contribution experience: dubbo, easyexcel, QLExpress, tablesaw, debezium
+          <b>2. 技术</b><br>
+          > 丰富的技术架构经验<br>
+          > 精通多线程开发，擅长解决生产 JVM 问题<br>
+          > Github 开源项目贡献经历：dubbo、easyexcel、QLExpress、tablesaw、debezium
         </p>
 
       </div>
