--- a/zh.html
+++ b/zh.html
@@ -26,7 +26,7 @@
   <div class="header">
     <div class="topnav">
       <p>Welcome to Hongkai's Pages</p>
-      <img src="/assets/images/translation.png" onclick="javascript:window.location.href='zh.html'" />
+      <img src="/assets/images/translation.png" onclick="javascript:window.location.href='/'" />
     </div>
   </div>
 
@@ -40,10 +40,10 @@
     <aside class="sidebar" data-sidebar>
       <div class="sidebar-info">
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.jpg" alt="Hongkai Wang" width="80">
+          <img src="./assets/images/my-avatar.jpg" alt="王虹凯" width="80">
         </figure>
         <div class="info-content">
-          <h1 class="name" title="Hongkai Wang">Hongkai Wang</h1>
+          <h1 class="name" title="王虹凯">王虹凯</h1>
           <p style="padding-top: 20px;">
           <ul class="social-list">
             <li class="social-item">
@@ -65,7 +65,7 @@
           </p>
         </div>
         <button class="info_more-btn" data-sidebar-btn>
-          <span>Show Strengths</span>
+          <span>展示优势</span>
           <ion-icon name="chevron-down"></ion-icon>
         </button>
       </div>
@@ -73,15 +73,15 @@
       <div class="sidebar-info_more">
 
         <p>
-          <strong>1. Management</strong><br>
-          > 8+ years management experience<br>
-          > Lead : Data Product Team, Middleware Team, Marketing Team
+          <b>1. 管理</b><br>
+          > 8年+技术管理经验<br>
+          > 带过 : 数据中台团队, 中间件团队（自研）, 渠道营销团队（拉新&留存）
         </p>
         <p>
-          <strong>2. Tech</strong><br>
-          > Rich experience in system architecture<br>
-          > Proficient in multi-threaded development, good at solving production JVM problems<br>
-          > Github contribution experience: dubbo, easyexcel, QLExpress, tablesaw, debezium
+          <b>2. 技术</b><br>
+          > 丰富的技术架构经验<br>
+          > 精通多线程开发，擅长解决生产 JVM 问题<br>
+          > Github 开源项目贡献经历：dubbo、easyexcel、QLExpress、tablesaw、debezium
         </p>
 
       </div>
@@ -96,24 +96,24 @@
       <nav class="navbar">
         <ul class="navbar-list">
           <li class="navbar-item">
-            <button class="navbar-link  active" data-nav-link>About</button>
+            <button class="navbar-link  active" data-nav-link>关于我</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Career</button>
+            <button class="navbar-link" data-nav-link>职业生涯</button>
           </li>
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>Blog</button>
+            <button class="navbar-link" data-nav-link>文章</button>
           </li>
         </ul>
       </nav>
       <!--
               - #About
             -->
-      <article class="about  active" data-page="about">
+      <article class="about  active" data-page="关于我">
         <section class="about-text">
-          <h3 class="h3 service-title">Personal</h3>
+          <h3 class="h3 service-title">个人信息</h3>
           <table>
             <thead>
               <tr>
@@ -123,23 +123,23 @@
             </thead>
             <tbody>
               <tr>
-                <td><strong>Name</strong></td>
-                <td>Hongkai Wang</td>
+                <td><strong>姓名</strong></td>
+                <td>王虹凯</td>
               </tr>
               <tr>
-                <td><strong>Gender</strong></td>
-                <td>Male</td>
+                <td><strong>性别</strong></td>
+                <td>男</td>
               </tr>
               <tr>
-                <td><strong>City</strong></td>
-                <td>Shenzhen, China</td>
+                <td><strong>城市</strong></td>
+                <td>深圳, 中国</td>
               </tr>
               <tr>
-                <td><strong>Professional Title</strong></td>
-                <td>Tech Manager</td>
+                <td><strong>职位</strong></td>
+                <td>技术经理</td>
               </tr>
               <tr>
-                <td><strong>Community Contributions</strong></td>
+                <td><strong>社区贡献</strong></td>
                 <td style="tword-break:keep-all"><a href="https://github.com/apache/dubbo">dubbo</a> | <a
                     href="https://github.com/alibaba/easyexcel">easyexcel</a> |
                   <a href="https://github.com/alibaba/QLExpress">QLExpress</a> | <a
@@ -152,48 +152,43 @@
                 <td><a href="mailto:whk.private@gmail.com">whk.private@gmail.com</a></td>
               </tr>
               <tr>
-                <td><strong>Social Accounts</strong></td>
+                <td><strong>社交账号</strong></td>
                 <td>WeChat: micelife | <a href="https://twitter.com/QiongDad">Twitter: QiongDad</a> | <a
-                    href="https://github.com/helpta">Github: helpta</a></td>
+                    href="https://github.com/helpta">Github:
+                    helpta</a></td>
               </tr>
             </tbody>
           </table>
         </section>
         <section class="about-text">
-          <h3 class="h3 service-title">Work Attitude</h3>
+          <h3 class="h3 service-title">工作观点</h3>
           <p>
-            I want the team members to be：<strong>Responsible, Sincere and Great.</strong><br>
+            我希望团队成员是：<strong>负责、真诚、卓越。</strong><br>
             <span>
-              <strong>Responsible：</strong>It is the most basic requirement that regardless of your personality and
-              attitude towards the overall product/project,
-              please treat the work within your responsibilities with the responsibility and attitude of the first
-              person in charge.
+              <strong>负责：</strong>是最基本要求，不管你的性格如何、对待整体产品/项目的态度如何，请对待自己职责内的工作，具有第一负责人的责任心和态度。
             </span>
             <span>
-              <strong>Sincere：</strong>Being genuine and honest with people on the basis of `responsibility` is, in my
-              opinion, a necessary condition for
-              integration into the team. It is also a basic factor for team harmony, elimination of internal conflict,
-              gas out of the
-              same hole, and efficient cooperation.
+              <strong>真诚：</strong>在`负责`的基础上，与人真挚、诚实，我认为是融入团队的必要条件。同时也是团队和谐、消除内耗、气出一孔、高效率合作的基础因素。
             </span>
             <span>
-              <strong>Great：</strong>This is a higher level of requirement, which is very meaningful to the company, to
-              the team and to the individual. This
-              is not a requirement for the final result, but an evaluation criterion for each step. A thing, "to do":
-              need to spend
-              some time; "to do well": need to spend some more energy; "simple and good, high efficiency to meet the
-              needs of the
-              current stage, the future planning has a certain forward-looking ": need more daily understanding of the
-              company's
-              strategy, team rhythm, personal accumulation, every opportunity to 'land', as a good practice application,
-              to improve
-              their overall control.
+              <strong>卓越：</strong>这是更高一层的要求，对公司、对团队、对个人都是非常有意义的。这个不是对最终结果的要求，而是对每一步的评价标准。一件事情，“做到”：需要花点时间；“做好”：需要再花点精力；“简单好用，高效率符合现阶段需要，对未来的规划有一定前瞻性”：需要日常多理解公司战略、团队节奏、个人积累，把每一次‘落地’的机会，都作为好的实践应用，提升自己的整体把控力。
             </span>
           </p>
         </section>
         <section class="about-text">
-          <h3 class="h3 service-title">个人观点</h3>
+          <h3 class="h3 service-title">事情观点</h3>
           <p>
+            我希望团队成员是：<strong>负责、真诚、卓越。</strong><br>
+            <span>
+              <strong>负责：</strong>是最基本要求，不管你的性格如何、对待整体产品/项目的态度如何，请对待自己职责内的工作，具有第一负责人的责任心和态度。
+            </span>
+            <span>
+              <strong>真诚：</strong>在`负责`的基础上，与人真挚、诚实，我认为是融入与团队的必要条件。同时也是团队和谐、消除内耗、气出一孔、高效率合作的基础因素。
+            </span>
+            <span>
+              <strong>卓越：</strong>这是更高一层的要求，对公司、对团队、对个人都是非常有意义的。这个不是对最终结果的要求，而是对每一步的评价标准。一件事情，“做到”：需要花点时间；“做好”：需要再花点精力；“简单好用，高效率符合现阶段需要，对未来的规划有一定前瞻性”：需要日常多理解公司战略、团队节奏、个人积累，把每一次‘落地’的机会，都当做一次好的实践，提升自己的整体把控力。
+            </span>
+
             觉醒进行时 ：我认为在当前信息爆炸的社会中，认知是很重要的。我们应该知道我们想要什么，我们在追求什么，这样我们就不会在短短的几十年里荒废了。
           </p>
           <p>
@@ -207,28 +202,19 @@
           </p>
         </section>
         <header>
-          <h2 class="h2 article-title">About me</h2>
+          <h2 class="h2 article-title">关于我</h2>
         </header>
         <section class="about-text">
           <p>
-            Awakening in progress ： I think cognition is important in the current information explosion
-            society. We should know what we want and what we are pursuing so that we do not spend a few
-            short decades in desolation.
+            觉醒进行时 ：我认为在当前信息爆炸的社会中，认知是很重要的。我们应该知道我们想要什么，我们在追求什么，这样我们就不会在短短的几十年里荒废了。
           </p>
           <p>
-            I work for a ToB company in China and I am mainly responsible for building the data middle
-            platform. You can simply think of ETL type tools, like Airbyte, TapData. we build our own
-            products：
+            我在中国的一家ToB公司工作，主要负责建立数据中台。你可以简单地认为是ETL类型的工具，比如Airbyte、TapData。我们构建自己的产品：
           <ul>
-            <li>* Data security platform: application security, data security (storage, usage,
-              transmission).</li>
-            <li>* Data Lake Platform: a real-time data synchronization tool based on Debezium for
-              lightweight data cleansing.</li>
-            <li>* Data development platform: a balance of offline tasks (mainly) and real-time tasks. Mainly
-              based on DophinSchedule's offline scheduling to achieve data processing and handling that
-              can be highly flexible.</li>
-            <li>* Data analysis platform: visual report construction, convenient dimensional analysis, event
-              analysis, funnel analysis, etc. </li>
+            <li>* 数据安全平台: 应用安全, 数据安全 (存储, 使用,传输).</li>
+            <li>* 数据湖平台: 基于Debezium的轻量级数据清洗的事实数据同步工具。</li>
+            <li>* 数据开发平台: 支持离线任务（主要）和实时任务。 基于DophinSchedule的高扩展性、灵活性的离线调度平台。</li>
+            <li>* 数据分析平台: 虚拟报表设计，维度分析、事件分析、漏斗分析等。</li>
           </ul>
           </p>
         </section>
@@ -236,18 +222,17 @@
                 - service
               -->
         <section class="service">
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">进行中的状态</h3>
           <ul class="service-list">
             <li class="service-item">
               <div class="service-icon-box">
                 <img src="./assets/images/icon-design.svg
-                      " alt="design icon" width="40">
+                              " alt="design icon" width="40">
               </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Team Management</h4>
+                <h4 class="h4 service-item-title">团队管理</h4>
                 <p class="service-item-text">
-                  7 years of experience managing teams of over ten people.<br>
-                  Led multi-million (turnover, RMB) banking projects.
+                  7年超过是人的团队管理经验。<br>主导超百万成交额的银行项目。
                 </p>
               </div>
             </li>
@@ -256,9 +241,9 @@
                 <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
               </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Technical Architecture</h4>
+                <h4 class="h4 service-item-title">技术架构</h4>
                 <p class="service-item-text">
-                  Lead the architecture design of ETL products and participate in ToB output.
+                  主导ETL产品的架构设计和参与ToB输出。
                 </p>
               </div>
             </li>
@@ -267,10 +252,9 @@
                 <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
               </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Self-improvement</h4>
+                <h4 class="h4 service-item-title">自我提升</h4>
                 <p class="service-item-text">
-                  personal planning, <br>upward management, <br>team
-                  management, <br>leadership building, etc.
+                  个人规划、<br>向上管理、<br>团队管理、<br>领导力建设等。
                 </p>
               </div>
             </li>
@@ -279,11 +263,10 @@
                 <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
               </div>
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Read</h4>
+                <h4 class="h4 service-item-title">阅读</h4>
                 <p class="service-item-text">
-                  The second mountain（done）<br>The Power of Habit(done) <br>From Good to
-                  Great（done）<br>Outliers The Story of Success (90%) <br>
-                  Steve Jobs（60%）
+                  第二座山（已完成）<br>行为的力量（已完成）<br>从优秀到卓越（已完成）<br>异类 (90%) <br>
+                  史蒂夫·乔布斯（60%）
                 </p>
               </div>
             </li>
@@ -295,7 +278,7 @@
               - #RESUME
             -->
 
-      <article class="resume" data-page="career">
+      <article class="resume" data-page="职业生涯">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -480,11 +463,15 @@
 
       </article>
 
+
+
+
+
       <!--
               - #BLOG
             -->
 
-      <article class="blog" data-page="blog">
+      <article class="blog" data-page="文章">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
