--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
       </div>
       <div class="separator"></div>
       <div class="sidebar-info_more">
-
         <p>
           <strong>1. Management</strong><br>
           > 8+ years management experience<br>
@@ -93,27 +92,27 @@
       <!--
         - #NAVBAR
       -->
-      <nav class="navbar">
-        <ul class="navbar-list">
+      <!--<nav class="navbar">
+         <ul class="navbar-list">
           <li class="navbar-item">
             <button class="navbar-link  active" data-nav-link>About</button>
           </li>
 
-          <li class="navbar-item">
+           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Career</button>
           </li>
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>Blog</button>
-          </li>
+          </li> 
         </ul>
-      </nav>
+      </nav>-->
       <!--
               - #About
             -->
       <article class="about  active" data-page="about">
         <section class="about-text">
-          <h3 class="h3 service-title">Personal</h3>
+          <h3 class="h3  article-title">Personal</h3>
           <table>
             <thead>
               <tr>
@@ -160,9 +159,9 @@
           </table>
         </section>
         <section class="about-text">
-          <h3 class="h3 service-title">Work Attitude</h3>
+          <h3 class="h3  article-title">Work Attitude</h3>
           <p>
-            I want the team members to be：<strong>Responsible, Sincere and Great.</strong><br>
+            I want the team members to be：<strong>Responsible, Sincere and Pursuit of Excellence.</strong><br>
             <span>
               <strong>Responsible：</strong>It is the most basic requirement that regardless of your personality and
               attitude towards the overall product/project,
@@ -177,7 +176,8 @@
               same hole, and efficient cooperation.
             </span>
             <span>
-              <strong>Great：</strong>This is a higher level of requirement, which is very meaningful to the company, to
+              <strong>Pursuit of Excellence：</strong>This is a higher level of requirement, which is very meaningful to
+              the company, to
               the team and to the individual. This
               is not a requirement for the final result, but an evaluation criterion for each step. A thing, "to do":
               need to spend
@@ -191,9 +191,20 @@
             </span>
           </p>
         </section>
-        <section class="about-text">
-          <h3 class="h3 service-title">个人观点</h3>
+        <!-- <section class="about-text">
+          <h3 class="h3  article-title">基础素质</h3>
           <p>
+            我希望团队成员是：<strong>负责、真诚、卓越。</strong><br>
+            <span>
+              <strong>负责：</strong>是最基本要求，不管你的性格如何、对待整体产品/项目的态度如何，请对待自己职责内的工作，具有第一负责人的责任心和态度。
+            </span>
+            <span>
+              <strong>真诚：</strong>在`负责`的基础上，与人真挚、诚实，我认为是融入与团队的必要条件。同时也是团队和谐、消除内耗、气出一孔、高效率合作的基础因素。
+            </span>
+            <span>
+              <strong>卓越：</strong>这是更高一层的要求，对公司、对团队、对个人都是非常有意义的。这个不是对最终结果的要求，而是对每一步的评价标准。一件事情，“做到”：需要花点时间；“做好”：需要再花点精力；“简单好用，高效率符合现阶段需要，对未来的规划有一定前瞻性”：需要日常多理解公司战略、团队节奏、个人积累，把每一次‘落地’的机会，都当做一次好的实践，提升自己的整体把控力。
+            </span>
+
             觉醒进行时 ：我认为在当前信息爆炸的社会中，认知是很重要的。我们应该知道我们想要什么，我们在追求什么，这样我们就不会在短短的几十年里荒废了。
           </p>
           <p>
@@ -207,36 +218,25 @@
           </p>
         </section>
         <header>
-          <h2 class="h2 article-title">About me</h2>
+          <h3 class="h3 article-title">可迁移能力</h3>
         </header>
         <section class="about-text">
           <p>
-            Awakening in progress ： I think cognition is important in the current information explosion
-            society. We should know what we want and what we are pursuing so that we do not spend a few
-            short decades in desolation.
+            觉醒进行时 ：我认为在当前信息爆炸的社会中，认知是很重要的。我们应该知道我们想要什么，我们在追求什么，这样我们就不会在短短的几十年里荒废了。
           </p>
           <p>
-            I work for a ToB company in China and I am mainly responsible for building the data middle
-            platform. You can simply think of ETL type tools, like Airbyte, TapData. we build our own
-            products：
+            我在中国的一家ToB公司工作，主要负责建立数据中台。你可以简单地认为是ETL类型的工具，比如Airbyte、TapData。我们构建自己的产品：
           <ul>
-            <li>* Data security platform: application security, data security (storage, usage,
-              transmission).</li>
-            <li>* Data Lake Platform: a real-time data synchronization tool based on Debezium for
-              lightweight data cleansing.</li>
-            <li>* Data development platform: a balance of offline tasks (mainly) and real-time tasks. Mainly
-              based on DophinSchedule's offline scheduling to achieve data processing and handling that
-              can be highly flexible.</li>
-            <li>* Data analysis platform: visual report construction, convenient dimensional analysis, event
-              analysis, funnel analysis, etc. </li>
+            <li>* 数据安全平台: 应用安全, 数据安全 (存储, 使用,传输).</li>
+            <li>* 数据湖平台: 基于Debezium的轻量级数据清洗的事实数据同步工具。</li>
+            <li>* 数据开发平台: 支持离线任务（主要）和实时任务。 基于DophinSchedule的高扩展性、灵活性的离线调度平台。</li>
+            <li>* 数据分析平台: 虚拟报表设计，维度分析、事件分析、漏斗分析等。</li>
           </ul>
           </p>
         </section>
-        <!--
-                - service
-              -->
+        
         <section class="service">
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3  article-title">What i'm doing</h3>
           <ul class="service-list">
             <li class="service-item">
               <div class="service-icon-box">
@@ -288,14 +288,14 @@
               </div>
             </li>
           </ul>
-        </section>
+        </section> -->
       </article>
 
       <!--
               - #RESUME
             -->
 
-      <article class="resume" data-page="career">
+      <!-- <article class="resume" data-page="career">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -478,13 +478,13 @@
 
         </section>
 
-      </article>
+      </article> -->
 
       <!--
               - #BLOG
             -->
 
-      <article class="blog" data-page="blog">
+      <!-- <article class="blog" data-page="blog">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
@@ -666,7 +666,7 @@
 
         </section>
 
-      </article>
+      </article> -->
     </div>
   </main>
   <!--
