--- a/zh.html
+++ b/zh.html
@@ -71,9 +71,8 @@
       </div>
       <div class="separator"></div>
       <div class="sidebar-info_more">
-
         <p>
-          <b>1. 管理</b><br>
+          <strong>1. 管理</strong><br>
           > 8年+技术管理经验<br>
           > 带过 : 数据中台团队, 中间件团队（自研）, 渠道营销团队（拉新&留存）
         </p>
@@ -93,11 +92,11 @@
       <!--
         - #NAVBAR
       -->
-      <nav class="navbar">
+      <!--  <nav class="navbar">
         <ul class="navbar-list">
           <li class="navbar-item">
             <button class="navbar-link  active" data-nav-link>关于我</button>
-          </li>
+          </li> 
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>职业生涯</button>
@@ -105,15 +104,15 @@
 
           <li class="navbar-item">
             <button class="navbar-link" data-nav-link>文章</button>
-          </li>
+          </li> 
         </ul>
-      </nav>
+      </nav>-->
       <!--
               - #About
             -->
       <article class="about  active" data-page="关于我">
         <section class="about-text">
-          <h3 class="h3 service-title">个人信息</h3>
+          <h3 class="h3  article-title">个人信息</h3>
           <table>
             <thead>
               <tr>
@@ -161,9 +160,9 @@
           </table>
         </section>
         <section class="about-text">
-          <h3 class="h3 service-title">工作观点</h3>
+          <h3 class="h3  article-title">工作观</h3>
           <p>
-            我希望团队成员是：<strong>负责、真诚、卓越。</strong><br>
+            我希望团队成员是：<strong>负责、真诚、追求卓越。</strong><br>
             <span>
               <strong>负责：</strong>是最基本要求，不管你的性格如何、对待整体产品/项目的态度如何，请对待自己职责内的工作，具有第一负责人的责任心和态度。
             </span>
@@ -171,14 +170,16 @@
               <strong>真诚：</strong>在`负责`的基础上，与人真挚、诚实，我认为是融入团队的必要条件。同时也是团队和谐、消除内耗、气出一孔、高效率合作的基础因素。
             </span>
             <span>
-              <strong>卓越：</strong>这是更高一层的要求，对公司、对团队、对个人都是非常有意义的。这个不是对最终结果的要求，而是对每一步的评价标准。一件事情，“做到”：需要花点时间；“做好”：需要再花点精力；“简单好用，高效率符合现阶段需要，对未来的规划有一定前瞻性”：需要日常多理解公司战略、团队节奏、个人积累，把每一次‘落地’的机会，都作为好的实践应用，提升自己的整体把控力。
+              <strong>追求卓越：</strong>这是更高一层的要求，对公司、对团队、对个人都是非常有意义的。这个不是对最终结果的要求，而是对每一步的评价标准。一件事情，“做到”：需要花点时间；“做好”：需要再花点精力；“简单好用，高效率符合现阶段需要，对未来的规划有一定前瞻性”：需要日常多理解公司战略、团队节奏、个人积累，把每一次‘落地’的机会，都作为好的实践应用，提升自己的整体把控力。
             </span>
           </p>
         </section>
-        <section class="about-text">
-          <h3 class="h3 service-title">事情观点</h3>
+        <!-- <section class="about-text">
+          <header>
+            <h3 class="h3  article-title">基础素质</h3>
+          </header>
           <p>
-            我希望团队成员是：<strong>负责、真诚、卓越。</strong><br>
+            我希望团队成员是：<strong>负责、真诚、追求卓越。</strong><br>
             <span>
               <strong>负责：</strong>是最基本要求，不管你的性格如何、对待整体产品/项目的态度如何，请对待自己职责内的工作，具有第一负责人的责任心和态度。
             </span>
@@ -186,43 +187,34 @@
               <strong>真诚：</strong>在`负责`的基础上，与人真挚、诚实，我认为是融入与团队的必要条件。同时也是团队和谐、消除内耗、气出一孔、高效率合作的基础因素。
             </span>
             <span>
-              <strong>卓越：</strong>这是更高一层的要求，对公司、对团队、对个人都是非常有意义的。这个不是对最终结果的要求，而是对每一步的评价标准。一件事情，“做到”：需要花点时间；“做好”：需要再花点精力；“简单好用，高效率符合现阶段需要，对未来的规划有一定前瞻性”：需要日常多理解公司战略、团队节奏、个人积累，把每一次‘落地’的机会，都当做一次好的实践，提升自己的整体把控力。
+              <strong>追求卓越：</strong>这是更高一层的要求，对公司、对团队、对个人都是非常有意义的。这个不是对最终结果的要求，而是对每一步的评价标准。一件事情，“做到”：需要花点时间；“做好”：需要再花点精力；“简单好用，高效率符合现阶段需要，对未来的规划有一定前瞻性”：需要日常多理解公司战略、团队节奏、个人积累，把每一次‘落地’的机会，都当做一次好的实践，提升自己的整体把控力。
             </span>
-
-            觉醒进行时 ：我认为在当前信息爆炸的社会中，认知是很重要的。我们应该知道我们想要什么，我们在追求什么，这样我们就不会在短短的几十年里荒废了。
-          </p>
-          <p>
-            我在中国的一家ToB公司工作，主要负责建立数据中台。你可以简单地认为是ETL类型的工具，比如Airbyte、TapData。我们构建自己的产品：
-          <ul>
-            <li>* 数据安全平台: 应用安全, 数据安全 (存储, 使用,传输).</li>
-            <li>* 数据湖平台: 基于Debezium的轻量级数据清洗的事实数据同步工具。</li>
-            <li>* 数据开发平台: 支持离线任务（主要）和实时任务。 基于DophinSchedule的高扩展性、灵活性的离线调度平台。</li>
-            <li>* 数据分析平台: 虚拟报表设计，维度分析、事件分析、漏斗分析等。</li>
-          </ul>
           </p>
         </section>
-        <header>
-          <h2 class="h2 article-title">关于我</h2>
-        </header>
         <section class="about-text">
+          <header>
+            <h3 class="h3 article-title">可迁移能力</h3>
+          </header>
           <p>
-            觉醒进行时 ：我认为在当前信息爆炸的社会中，认知是很重要的。我们应该知道我们想要什么，我们在追求什么，这样我们就不会在短短的几十年里荒废了。
-          </p>
-          <p>
-            我在中国的一家ToB公司工作，主要负责建立数据中台。你可以简单地认为是ETL类型的工具，比如Airbyte、TapData。我们构建自己的产品：
-          <ul>
-            <li>* 数据安全平台: 应用安全, 数据安全 (存储, 使用,传输).</li>
-            <li>* 数据湖平台: 基于Debezium的轻量级数据清洗的事实数据同步工具。</li>
-            <li>* 数据开发平台: 支持离线任务（主要）和实时任务。 基于DophinSchedule的高扩展性、灵活性的离线调度平台。</li>
-            <li>* 数据分析平台: 虚拟报表设计，维度分析、事件分析、漏斗分析等。</li>
-          </ul>
+            1.对工作事项的投入程度。-- “追求卓越”
+            2.高效沟通协作的能力。-- 工作过程中积累的能力。
+            3.成熟的职场
+
+            我希望团队成员是：<strong>负责、真诚、追求卓越。</strong><br>
+            <span>
+              <strong>负责：</strong>是最基本要求，不管你的性格如何、对待整体产品/项目的态度如何，请对待自己职责内的工作，具有第一负责人的责任心和态度。
+            </span>
+            <span>
+              <strong>真诚：</strong>在`负责`的基础上，与人真挚、诚实，我认为是融入与团队的必要条件。同时也是团队和谐、消除内耗、气出一孔、高效率合作的基础因素。
+            </span>
+            <span>
+              <strong>追求卓越：</strong>这是更高一层的要求，对公司、对团队、对个人都是非常有意义的。这个不是对最终结果的要求，而是对每一步的评价标准。一件事情，“做到”：需要花点时间；“做好”：需要再花点精力；“简单好用，高效率符合现阶段需要，对未来的规划有一定前瞻性”：需要日常多理解公司战略、团队节奏、个人积累，把每一次‘落地’的机会，都当做一次好的实践，提升自己的整体把控力。
+            </span>
           </p>
         </section>
-        <!--
-                - service
-              -->
+       
         <section class="service">
-          <h3 class="h3 service-title">进行中的状态</h3>
+          <h3 class="h3  article-title">最近状态</h3>
           <ul class="service-list">
             <li class="service-item">
               <div class="service-icon-box">
@@ -271,14 +263,14 @@
               </div>
             </li>
           </ul>
-        </section>
+        </section> -->
       </article>
 
       <!--
               - #RESUME
             -->
 
-      <article class="resume" data-page="职业生涯">
+      <!-- <article class="resume" data-page="职业生涯">
 
         <header>
           <h2 class="h2 article-title">Resume</h2>
@@ -461,7 +453,7 @@
 
         </section>
 
-      </article>
+      </article> -->
 
 
 
@@ -471,7 +463,7 @@
               - #BLOG
             -->
 
-      <article class="blog" data-page="文章">
+      <!-- <article class="blog" data-page="文章">
 
         <header>
           <h2 class="h2 article-title">Blog</h2>
@@ -653,7 +645,7 @@
 
         </section>
 
-      </article>
+      </article> -->
     </div>
   </main>
   <!--
